--- a/user-list-page/user-list-page/Views/User/Add.cshtml
+++ b/user-list-page/user-list-page/Views/User/Add.cshtml
@@ -1,8 +1,50 @@
-﻿@model List<User>
+﻿@model user_list_page.Models.User
 
 @{
-    ViewData["PageTitle"] = "Create a new user";
+    ViewData["Title"] = "Add";
 }
-<h1>@ViewData["PageTitle"]</h1>
+<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                @using (Html.BeginForm("Add", "User", FormMethod.Post))
+                {
+                        <div>
+                            @Html.LabelFor(model => model.FirstName)
+                            @Html.TextBoxFor(model => model.FirstName)
+                        </div>
+                        <div>
+                            @Html.LabelFor(model => model.LastName)
+                            @Html.TextBoxFor(model => model.LastName)
+                        </div>
+                        <div>
+                            @Html.LabelFor(model => model.DateOfBirth)
+                            @Html.TextBoxFor(model => model.DateOfBirth, new { type = "datetime-local" })
+                        </div>
+                        <div>
+                            @Html.LabelFor(model => model.PhoneNumber)
+                            @Html.TextBoxFor(model => model.PhoneNumber)
+                        </div>
+                        <div>
+                            @Html.LabelFor(model => model.Address)
+                            @Html.TextBoxFor(model => model.Address)
+                        </div>
+                    
+                }
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <input type="submit" value="Add Person" />
+            </div>
+        </div>
+    </div>
+</div>
