--- a/user-list-page/user-list-page/Views/User/Index.cshtml
+++ b/user-list-page/user-list-page/Views/User/Index.cshtml
@@ -61,39 +61,36 @@ else
                 <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                @using (Html.BeginForm("Add", "User", FormMethod.Post))
-                {
-                    @foreach (var item in Model)
-                    {
-                        <div>
-                            <label class="control-label">First Name</label>
-                            <input name="FirstName" class="form-control" />
-                        </div>
-                        <div>
-                            <label class="control-label">Last Name</label>
-                            <input name="LastName" class="form-control" />
-                        </div>
-                        <div>
-                            <label class="control-label">Date Of Birth</label>
-                            <input name="DateOfBirth" class="form-control" type="datetime-local" />
-                        </div>
-                        <div>
-                            <label class="control-label">Phone Number</label>
-                            <input name="PhoneNumber" class="form-control" />
-                        </div>
-                        <div>
-                            <label class="control-label">Address</label>
-                            <input name="Address" class="form-control" />
-                        </div>
-                    }
-                    <input type="submit" value="Add Person" />
-                }
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+            @using (Html.BeginForm("Add", "User", FormMethod.Post))
+            {
+                <div class="modal-body">
+
+                    <div>
+                        <label class="control-label">First Name</label>
+                        <input name="FirstName" class="form-control"/>
+                    </div>
+                    <div>
+                        <label class="control-label">Last Name</label>
+                        <input name="LastName" class="form-control"/>
+                    </div>
+                    <div>
+                        <label class="control-label">Date Of Birth</label>
+                        <input name="DateOfBirth" class="form-control" type="datetime-local"/>
+                    </div>
+                    <div>
+                        <label class="control-label">Phone Number</label>
+                        <input name="PhoneNumber" class="form-control"/>
+                    </div>
+                    <div>
+                        <label class="control-label">Address</label>
+                        <input name="Address" class="form-control"/>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Add Person</button>
+                </div>
+            }
         </div>
     </div>
 </div>
