onchange status started

--- a/user-list-page/user-list-page/Views/User/Index.cshtml
+++ b/user-list-page/user-list-page/Views/User/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<user_list_page.Models.User>
+﻿@using System.Runtime.CompilerServices
+@model IEnumerable<user_list_page.Models.User>
 
 @{
     ViewData["PageTitle"] = "Users";
@@ -41,7 +42,11 @@
                 <td>
                     @Html.DropDownList("UserStatus",
                         new SelectList(Enum.GetValues(typeof(Status))),
-                        "Select action", new { @class = "form-control" })
+                        "Select action", new
+                        {
+                            @class = "form-control",
+                            @onchange="openModal(this)"
+                        })
                 </td>
             </tr>
         }
@@ -94,3 +99,35 @@ else
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="selectionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    function openModal(item) {
+        var selectedStatus = item.value;
+        var spouse = "";
+
+        // Set the modal's title and content
+        $("#selectionModal .modal-title").text("Select Spouse");
+        $("#selectionModal .modal-body").html("<div>Spouse: " + spouse + "</div>");
+
+        // Open the modal
+        $("#selectionModal").modal("show");
+    }
+</script>
