--- a/user-list-page/user-list-page/Views/User/Index.cshtml
+++ b/user-list-page/user-list-page/Views/User/Index.cshtml
@@ -100,28 +100,48 @@ else
     </div>
 </div>
 
-<div class="modal fade" id="selectionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="marriedModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Select spouse</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-                <div class="modal-body">
-                    <div>
-                        @Html.DropDownList("UserSpouse",
-                            new SelectList(Model.Select(s => s.SpouseName)),
-                        "Select action",
-                        new
-                        {
-                            @class = "form-control"
-                        })
-                    </div>
+            <div class="modal-body">
+                <div>
+                    Spouse: @Html.DropDownList("UserSpouse",
+                                new SelectList(Model.Select(s => s.SpouseName)),
+                                "Select action",
+                                new
+                                {
+                                    @class = "form-control"
+                                })
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="singleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Single dummy popup</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div>
+                    ;)
                 </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
         </div>
     </div>
 </div>
@@ -130,6 +150,9 @@ else
     function openModal(item) {
         var selectedStatus = item.value;
         if(selectedStatus == "Married"){ 
-        $("#selectionModal").modal("show"); }
+        $("#marriedModal").modal("show"); }
+        else {
+            $("#singleModal").modal("show");
+        }
     }
 </script>
