started realization of multiple addreses and phone numbers

--- a/user-list-page/user-list-page/Views/User/Add.cshtml
+++ b/user-list-page/user-list-page/Views/User/Add.cshtml
@@ -30,12 +30,12 @@
                             @Html.TextBoxFor(model => model.DateOfBirth, new { type = "datetime-local" })
                         </div>
                         <div>
-                            @Html.LabelFor(model => model.PhoneNumber)
-                            @Html.TextBoxFor(model => model.PhoneNumber)
+                            @Html.LabelFor(model => model.PhoneNumbers)
+                            @Html.TextBoxFor(model => model.PhoneNumbers)
                         </div>
                         <div>
-                            @Html.LabelFor(model => model.Address)
-                            @Html.TextBoxFor(model => model.Address)
+                            @Html.LabelFor(model => model.Addresses)
+                            @Html.TextBoxFor(model => model.Addresses)
                         </div>
                     
                 }
