--- a/user-list-page/user-list-page/Views/User/Index.cshtml
+++ b/user-list-page/user-list-page/Views/User/Index.cshtml
@@ -87,7 +87,7 @@ else
                         <div id="phoneNumbersContainer">
                             <input name="PhoneNumbers[0].Number" class="form-control"/>
                         </div>
-                        <button type="button" onclick="addPhoneNumber()" class="btn btn-primary" style="vertical-align: text-top;">+</button>
+                        <button type="button" onclick="addPhoneNumber()" class="btn btn-primary" style="vertical-align: top;">+</button>
                     </div>
                     <div id="addressContainer">
                         <label class="control-label">Address</label>
